[package]
name = "elixir-parser"
version = "0.1.0"
authors = ["MainShayne233 <shaynetremblay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.1"

[dependencies]
lalrpop-util = "0.17.1"
regex = "0.2.1"